# loc-solutions-backend

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: jobs.py  routes.py  webhooks.py
app/api/mappers/: job_response_mapper.py
app/clients/tms/: base.py  phrase.py
app/core/: config.py
app/db/: database.py
app/db/models/: job.py  webhook_event.py
app/domain/: job.py  types.py
app/mappers/: job_mapper.py
app/models/: job.py  qc.py  webhooks.py
app/repos/: jobs.py  webhook_events.py
app/services/: job_service.py  qc_service.py
docs/: ARCHITECTURE.md
